Update bottom page

--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
         <![endif]-->
 
     <!-- class="col-md-4" -->
-        <div class="main_page">
+        <div class="main_page active">
             <div class="main_contain">
                 <img src="img/rocket.png" alt="Rocket Web" />
                 <img src="img/page1.png" alt="Rocket Web" />
                 <a href="#" class="btn btn-inverse btn-block login" role="button">Login</a>
-                <a href="#" class="btn btn-inverse btn-block btn-mobile" role="button">Request for account</a>
+                <a href="#" class="btn btn-inverse btn-block btn-mobile page-register" role="button">Request for account</a>
                 <a href="#" class="btn btn-inverse btn-block btn-mobile" role="button">Blog</a>
             </div>
             <div class="register_contain">
-                <a href="#" class="btn btn-desktop btn-register" role="button">Request for account</a>
+                <a href="#" class="btn btn-desktop btn-register page-register" role="button">Request for account</a>
             </div>
             <div class="blog_contain">
                 <a href="#" class="btn btn-desktop btn-blog" role="button">Blog</a>
             </div>
         </div>
 
-        <div class="right_page">
+        <div class="right_page to-right">
             <div class="login_contain">
                 <i class="glyphicon glyphicon-remove remove-right" title="Back to main page"></i>
                 <div class="logo text-center">
@@ -64,7 +64,7 @@
                 </form>
             </div>
         </div>
-        <div class="bottom_page active">
+        <div class="bottom_page to-bottom">
             <div class="bottom_main_contain container">
                 <i class="glyphicon glyphicon-remove remove-bottom" title="Back to main page"></i>
                 <div class="bottom_img">
